Initial visual footer, bugfixes
- Initial footer was added, not quite functional, perfect yet just for eye appeal,
- bugfix; select was not showing errors and it was skipping in forms, now it does show a required error,
- FormField import missing for HelpCenterCategoryData
- sliders removed for now,

--- a/Klinika/klinika.client/src/index.css
+++ b/Klinika/klinika.client/src/index.css
@@ -3,7 +3,7 @@
 @tailwind utilities;
 
 body {
-  @apply bg-gradient-to-b from-[#f4fbef] via-green-100 to-white;
+  @apply bg-gradient-to-b from-[#f4fbef] via-green-50 to-white;
 }
 
 * {
